--- a/app/src/main/res/layout/activity_sample_list_item.xml
+++ b/app/src/main/res/layout/activity_sample_list_item.xml
@@ -7,6 +7,7 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/item_img"
         android:layout_width="70dp"
         android:layout_height="70dp" />
